Fix menu alignment

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -21,11 +21,16 @@
   line-height: 35px;
 }
 
+.menuLink {
+  margin: 0;
+  padding: 0;
+}
+
 .menu a {
   color: var(--fg);
   box-shadow: none;
   text-decoration: none;
-  padding: 0 10px;
+  padding-right: 10px;
 }
 
 .menu a:hover {
